Fixed overlapping Animations

--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,8 @@ body {
     grid-gap: 1rem;
     grid-row: 2/3;
     z-index: 1;
+    align-content: center;
+    align-items: center;
     .sortButton,
     input {
       margin: 2rem;
@@ -75,7 +77,7 @@ body {
     .sortButton {
       cursor: pointer;
       color: white;
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       font-weight: bold;
     }
     .speed {
